force-app/main/default/objects/Patient_Vital_Alert__e/Patient_Vital_Alert__e.object-meta.xml
<CustomObject>
    <description>Published when ingested vitals breach a threshold or trend abnormally.</description>
    <label>Patient Vital Alert</label>
    <pluralLabel>Patient Vital Alerts</pluralLabel>
</CustomObject>