force-app/main/default/objects/Patient_Vital_Alert__e/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <description>CRITICAL_VITALS, ABNORMAL_TREND or DEVICE_DISCONNECTED. Text rather than Picklist: platform events do not support picklist fields.</description>
    <label>Alert Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>