force-app/main/default/objects/Patient_Vital_Alert__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Alert Message</label>
    <length>500</length>
    <type>Text</type>
</CustomField>