force-app/main/default/objects/Patient_Vital_Alert__e/fields/Patient_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Device_Id__c</fullName>
    <label>Device ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>