force-app/main/default/objects/Patient_Vital_Alert__e/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <description>CRITICAL, AT_RISK or STABLE. Text rather than Picklist: platform events do not support picklist fields.</description>
    <label>Patient State</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>