force-app/main/default/objects/Patient_Vital_Alert__e/fields/SpO2__c.field-meta.xml
<CustomField>
    <fullName>SpO2__c</fullName>
    <label>SpO2</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>