force-app/main/default/objects/Patient_Vital_Alert__e/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>